<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Baby Loading...</string>
    <string name="market">android</string>
    <string name="color_pink">#ff99ff</string>
    <string name="color_blue">#33cccc</string>
    <string name="color_title">#ffffff</string>
    <string name="color_text_1">#000000</string>
    <string name="size_title">22dip</string>
    <string name="lmp">LMP Date:</string>
    <string name="title_due_date">Your wife\'s estimated due date is:</string>
    <string name="title_trimester_first">First Trimester</string>
    <string name="title_trimester_second">Second Trimester</string>
    <string name="title_trimester_third">Third Trimester</string>
    <string name="title_timeline">My Wife\'s Timeline</string>
    <string name="empty"></string>
    <string name="title_feelings">Feelings</string>
    <string name="about_email">You can set up an email account for your child. You and your wife, along with friends and family can send messages that can be read later in life. \n\nEnter Email Address Below:</string>

    <string name="about_timeline">This is built off of the date of your wife\'s last menstrual period. \n\nFirst Row: Current Week \nSecond Row: Current Month \nThird Row: Current Trimester</string>

    <string name="title_profile">Wife\'s Profile</string>

    <string name="title_developer_name">ndrios</string>

    <string name="title_babys_coming">Baby\'s Comin\' Checklist</string>

    <string name="title_doctor">Quick Contacts...</string>

    <string name="title_baby_names">Baby Names...</string>
    
      
    <string name="month_0">0</string>  
    <string name="month_1">1</string>
    <string name="month_2">2</string>
    <string name="month_3">3</string>
    <string name="month_4">4</string>
    <string name="month_5">5</string>
    <string name="month_6">6</string>
    <string name="month_7">7</string>
    <string name="month_8">8</string>
    <string name="lable_day">Day</string>
    <string name="label_week">Week</string>
    <string name="label_month">Month</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_dropbox">Backup to Dropbox</string>
    <string name="title_link_dropbox">Link to Dropbox</string>
    <string name="title_backup">Backup</string>
    
</resources>
