<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/task_bar"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/box" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dropbox"
            android:textColor="@color/white"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dropboxOutputTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_bar"
            android:gravity="center" >

            <Button
                android:id="@+id/dropboxViewBackupBTN"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_backup" />

            <Button
                android:id="@+id/dropboxViewLinkBTN"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title_link_dropbox" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>